--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,24 @@
 <resources>
     <string name="app_name" translatable="false">CondSpeak</string>
     <string name="criar_aviso">Criar-Aviso</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_bottom_bar_escolha_chat">chat</string>
+    <string name="menu_bottom_bar_reclamacao">Suporte ao Cliente</string>
+    <string name="menu_bottom_bar_avisos">Avisos</string>
+    <string name="title_activity_navigation_dr">NavigationDr</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+
+    <!-- Strings para activity_main_drawer.xml -->
+    <string name="menu_home">Início</string>
+    <string name="menu_gallery">Galeria</string>
+    <string name="menu_slideshow">Apresentação de Slides</string>
+    <string name="menu_communicate">Comunicar</string>
+    <string name="menu_share">Compartilhar</string>
+    <string name="menu_send">Enviar</string>
 </resources>
