--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="menu_communicate">Comunicar</string>
     <string name="menu_share">Compartilhar</string>
     <string name="menu_send">Enviar</string>
+    <string name="perfil">Perfil</string>
+    <string name="open_drawer">Open Drawer</string>
+    <string name="Close_drawer">Close Drawer\n</string>
 </resources>
